fix README misspelling
Thanks to Antonio Diaz Diaz for reporting.

* README: Fix typo.

--- a/README
+++ b/README
@@ -64,5 +64,5 @@ https://lists.gnu.org/mailman/listinfo/epsilon-devel .
 
 About the author
 ================
-Jitter was written by Luca Saiu.  His personal web site, whcih includes contact
+Jitter was written by Luca Saiu.  His personal web site, which includes contact
 information, is http://ageinghacker.net .
