--- a/doc/missing-man-page.1
+++ b/doc/missing-man-page.1
@@ -2,6 +2,7 @@
 .\" Stub man page for Jitter, to be used when help2man is not usable.
 .\"
 .\" Copyright (C) 2017, 2019, 2021 Luca Saiu
+.\" Written by Luca Saiu
 .\"
 .\" About this man page:
 .\" Permission is granted to copy, distribute and/or modify this
@@ -24,9 +25,9 @@
 .\" along with Jitter.  If not, see <http://www.gnu.org/licenses/>.
 .\"
 .\"
-.\" This file is crude.  I have only a very superficial understanding
-.\" of nroff.  It should still be adequate for a stub pointing to other.
-.\" documentation.
+.\" This file is crude, as I have only a very superficial understanding
+.\" of nroff.  However it should still be adequate as a stub pointing
+.\" to other documentation.
 .TH JITTER 1
 
 .SH NAME
@@ -36,9 +37,9 @@ Jitter \- an efficient Virtual Machine generator
 Alas, there is not much information here.
 
 .SH THIS MAN PAGE IS A STUB
-The system on which the source tarball was built lacked the
-GNU help2man utility or used cross-compilation without an
-emulator available to run the produced file with
+The system on which the Jitter source tarball was built
+lacked the GNU help2man utility or used cross-compilation
+without an emulator available to run the produced file with
 \fB\-\-help\fR ;
 for these reasons this page is just a placeholder.
 
@@ -48,8 +49,8 @@ able to use the command line
 
 \fBinfo\ jitter\fR
 
-to access the full documentation; otherwise, the best way to use the Info
-documentation is certainly from GNU Emacs.
+to access the full documentation; and of course the best way to use the Info
+documentation is from GNU Emacs.
 
 The official manual can also be compiled into Info, PostScript, PDF or HTML
 from the source distribution via
@@ -57,13 +58,20 @@ from the source distribution via
 \fBmake\ info\ ps\ pdf\ html\fR
 
 JitterLisp, an elaborate example of Jitter use, also has its own manual written
-in Texinfo, which is built from the same command line above.
+in Texinfo, which is built from the same command line above.  You may access it
+with
+
+\fBinfo\ jitterlisp\fR
+
+or equivalently from Emacs.
 
 .SH AUTHOR
 Written by Luca Saiu.
 
 .SH COPYRIGHT FOR JITTER
 Copyright \(co 2016, 2017, 2018, 2019, 2020, 2021  Luca Saiu
+.sp 0
+Written by Luca Saiu
 
 You may redistribute copies of Jitter under the terms of the GNU General Public
 License, version 3 or any later version published by the Free Software
@@ -71,8 +79,8 @@ Foundation.  For more information see the file named COPYING in the source
 distribution.
 
 .SH COPYRIGHT FOR THIS STUB MAN PAGE
-Copyright \(co 2017, 2019 Luca Saiu
-Updated in 2021 by Luca Saiu
+Copyright \(co 2017, 2019, 2021 Luca Saiu
+.sp 0
 Written by Luca Saiu
 
 Permission is granted to copy, distribute and/or modify this
